Fixed comments button not working on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,12 @@ button {
   background-color: inherit;
 }
 
+.dark a {
+  color: hsl(240, 100%, 70%);
+}
+
 .dark a:visited {
-  color: hsl(240, 100%, 80%);
+  color: hsl(0, 0%, 30%)
 }
 
 /***********************/
@@ -468,7 +472,7 @@ header {
 }
 
 .post-footer-left {
-  width: 50%;
+  width: 70%;
   display: flex;
   justify-content: left;
   align-items: center;
@@ -496,7 +500,7 @@ header {
 }
 
 .post-footer-right {
-  width: 50%;
+  width: 30%;
   display: flex;
   justify-content: right;
   align-items: center;
@@ -589,6 +593,14 @@ header {
   color: hsl(240, 100%, 50%);
   cursor: pointer;
   font-weight: 900;
+}
+
+.dark .comment-replies,
+.dark .reply-link,
+.dark .reply-more,
+.dark .comments-more,
+.dark .replies-more {
+  color: hsl(240, 100%, 70%)
 }
 
 .reply-link a,
